# paper-embeddings

./: pyproject.toml
scrape/: s.ipynb
scrape/data/: s-1501.00601.json
scrape/data/batch/: 1501.csv
